--- a/112208077_HW5.html
+++ b/112208077_HW5.html
@@ -57,10 +57,10 @@
       <section>
         <h2>Favorite Music</h2>
         <div class="music-gallery">
-          <a href="https://youtu.be/d5bbqKYu51w?si=4823RuU7VL1kxhnk"><img src="pic/song.jpg" alt="0X1=LOVESONG"></a>
-          <a href="https://youtu.be/phT2MJAn1KY?si=y4PhFuQ9TwGhGvo6"><img src="pic/song2.jpg" alt="Thursday's Child Has Far To Go"></a>
-          <a href="https://youtu.be/CJT7WMSzVMA?si=wvCHBi-5B2ZKVLoX"><img src="pic/song2.jpg" alt="Dear Sputnik"></a>
-          <a href="https://youtu.be/p24jpQrMh98?si=e2l3ekis5tuSTRk2"><img src="pic/song3.jpg" alt="Miracle"></a>
+          <a href="https://youtu.be/d5bbqKYu51w?si=4823RuU7VL1kxhnk"><img src="pic/song.jpg" alt="0X1=LOVESONG">0X1=LOVESONG</a>
+          <a href="https://youtu.be/phT2MJAn1KY?si=y4PhFuQ9TwGhGvo6"><img src="pic/song2.jpg" alt="Thursday's Child Has Far To Go">Thursday's Child Has Far To Go</a>
+          <a href="https://youtu.be/CJT7WMSzVMA?si=wvCHBi-5B2ZKVLoX"><img src="pic/song2.jpg" alt="Dear Sputnik">Dear Sputnik</a>
+          <a href="https://youtu.be/p24jpQrMh98?si=e2l3ekis5tuSTRk2"><img src="pic/song3.jpg" alt="Miracle">Miracle</a>
         </div>
         <p class="note">
           Note: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed diam nonummy nibh euismod tincidunt.
