--- a/112208077_HW5.html
+++ b/112208077_HW5.html
@@ -13,11 +13,11 @@
       <div class="photo-panel"></div>
       <div class="text-content">
         <h2>Chiu Chen Lyu</h2>
-        <h3>About Me</h3>
+        <h3>ABOUT ME</h3>
         <p>
           I am a sophomore in the Department of Economics at National Chengchi University. I am very interested in studying programming and computer science fundamentals. I have experience in writing Java, HTML, CSS, JavaScript, and Python.
         </p>
-        <h3>Contact</h3>
+        <h3>CONTACT</h3>
         <a class="email" href="mailto:112208077@nccu.edu.tw">112208077@nccu.edu.tw</a>
         <img class="nccu-icon" src="pic/logo.jpg" alt="NCCU Icon">
       </div>
@@ -34,24 +34,26 @@
           </div>
           <div class="timeline-item">
             <span class="year">2021 - 2023</span>
-            <span class="description">The Affiliated Senior High School of National Taiwan Normal University - Participated in mass communication club</span>
+            <span class="description">High School of National Taiwan Normal University<br>
+            Participated in mass communication club</span>
           </div>
           <div class="timeline-item">
             <span class="year">2018 - 2021</span>
-            <span class="description">Middle School Graduation - Started developing an interest in computer science</span>
+            <span class="description">Middle School Graduation<br>
+              Started developing an interest in computer science</span>
           </div>
         </div>
       </section>
 
       <section>
         <h2>Homework List</h2>
-        <ul class="homework-list">
-          <li>HW1 - <a href="https://github.com/chiuuu123/HW1.git">https://github.com/chiuuu123/HW1.git</a></li>
-          <li>HW2 - <a href="https://github.com/chiuuu123/HW2.git">https://github.com/chiuuu123/HW2.git</a></li>
-          <li>HW3 - <a href="https://github.com/chiuuu123/HW3.git">https://github.com/chiuuu123/HW3.git</a></li>
-          <li>HW4 - <a href="https://github.com/chiuuu123/HW4.git">https://github.com/chiuuu123/HW4.git</a></li>
-          <li>HW5 - <a href="https://github.com/chiuuu123/HW5.git">https://github.com/chiuuu123/HW5.git</a></li>
-        </ul>
+        <div class="homework-list">
+          <p><span>HW1 -</span><a href="https://github.com/chiuuu123/HW1.git">https://github.com/chiuuu123/HW1.git</a></p>
+          <p><span>HW2 -</span><a href="https://github.com/chiuuu123/HW2.git">https://github.com/chiuuu123/HW2.git</a></p>
+          <p><span>HW3 -</span><a href="https://github.com/chiuuu123/HW3.git">https://github.com/chiuuu123/HW3.git</a></p>
+          <p><span>HW4 -</span><a href="https://github.com/chiuuu123/HW4.git">https://github.com/chiuuu123/HW4.git</a></p>
+          <p><span>HW5 -</span><a href="https://github.com/chiuuu123/HW5.git">https://github.com/chiuuu123/HW5.git</a></p>
+        </div>
       </section>
 
       <section>
@@ -63,16 +65,19 @@
           </a>
           <a href="https://youtu.be/phT2MJAn1KY?si=y4PhFuQ9TwGhGvo6">
             <img src="pic/song2.jpg" alt="Thursday's Child Has Far To Go">
-            <span>Thursday's Child Has Far To Go</span></a>
+            <span>Thursday's Child Has Far To Go</span>
+          </a>
           <a href="https://youtu.be/CJT7WMSzVMA?si=wvCHBi-5B2ZKVLoX">
             <img src="pic/song2.jpg" alt="Dear Sputnik">
-            <span>Dear Sputnik</span></a>
+            <span>Dear Sputnik</span>
+          </a>
           <a href="https://youtu.be/p24jpQrMh98?si=e2l3ekis5tuSTRk2">
             <img src="pic/song3.jpg" alt="Miracle">
-            <span>Miracle</span></a>
+            <span>Miracle</span>
+          </a>
         </div>
         <p class="note">
-          Note: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed diam nonummy nibh euismod tincidunt.
+          Note: These songs are some of my favorites by TOMORROW X TOGETHER, with beautiful melodies and meaningful lyrics.
         </p>
       </section>
     </div>
